--- a/运行环境及硬件.MD
+++ b/运行环境及硬件.MD
@@ -1,9 +1,5 @@
 # 基于深度学习的自动驾驶与避障
-#### 姓名：贾一威
-#### 学号：20201217022017
-#### 院系：大数据科学学院
-#### 专业：数据科学与大数据技术
-#### 指导老师：张培华
+##略知一二仅供参考
 #### 文档生成日期：2024年5月23日
 
 ## 1.硬件介绍
